--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mmo-app",
   "version": "0.1.0",
   "private": true,
-  "homepagex": "wp-content/themes/shopseo/build/",
+  "homepage": "wp-content/themes/shopseo/build/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
