--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mmo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "wp-content/themes/shopseo/build/",
+  "homepagex": "wp-content/themes/shopseo/build/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,8 +10,13 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
     "binance-api-node": "^0.12.5",
+    "bootstrap": "^5.3.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.replace": "^4.1.4",
+    "lodash.sample": "^4.2.1",
+    "lodash.samplesize": "^4.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
